--- a/style.css
+++ b/style.css
@@ -53,12 +53,8 @@ header div{
 #item-sec1{
     background-color: violet;
     height: 100%;
-    width: 50%;
+    width: 50%;  
 }
-
-
-
-
 
 #bg-sec2{
     background-color: rgb(255, 255, 255);
@@ -69,14 +65,42 @@ header div{
 #item1-sec2{
     background-color: rgb(88, 88, 255);
     height: 100%;
-    width: 40%;
+    width: 50%;
 }
 
 #item2-sec2{
     background-color: pink;
     height: 100%;
-    width: 20%;
+    width: 25%;
 }
 
+#bg-sec3{
+    background-color: rgb(212, 212, 212);
+    height: 150px;
+    padding: 1rem;
+}
 
+#item1-sec3{
+    background-color: pink;
+    height: 100%;
+    width: 25%;
+}
+
+#item2-sec3{
+    background-color: rgb(88, 88, 255);
+    height: 100%;
+    width: 50%;
+}
+
+#bg-sec4{
+    background-color: rgb(212, 212, 212);
+    height: 300px;
+    padding: 1rem;
+}
+
+#item-sec4{
+    background-color: green;
+    height: 100%;
+    width: 50%;  
+}
 /* #endregion main*/
