--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+/* #region general */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .flex-container{
     display: flex;
     justify-content: center;
 }
+/* #endregion general */
 
 /* #region debug */
 
@@ -46,7 +49,7 @@ header div{
 /* #region main*/
 #bg-sec1{
     background-color: blue;
-    height: 150px;
+    height: 400px;
     padding: 1rem;
 }
 
@@ -58,49 +61,114 @@ header div{
 
 #bg-sec2{
     background-color: rgb(255, 255, 255);
-    height: 150px;
+    height: 400px;
     padding: 1rem;
 }
 
 #item1-sec2{
     background-color: rgb(88, 88, 255);
     height: 100%;
-    width: 50%;
+    width: 40%;
 }
 
 #item2-sec2{
     background-color: pink;
     height: 100%;
-    width: 25%;
+    width: 20%;
 }
 
 #bg-sec3{
     background-color: rgb(212, 212, 212);
-    height: 150px;
+    height: 400px;
     padding: 1rem;
 }
 
 #item1-sec3{
     background-color: pink;
     height: 100%;
-    width: 25%;
+    width: 20%;
 }
 
 #item2-sec3{
     background-color: rgb(88, 88, 255);
     height: 100%;
-    width: 50%;
+    width: 40%;
 }
 
-#bg-sec4{
+#bg-sec5{
     background-color: rgb(212, 212, 212);
-    height: 300px;
+    height: 600px;
     padding: 1rem;
 }
 
-#item-sec4{
+#item-sec5{
     background-color: green;
     height: 100%;
-    width: 50%;  
+    width: 60%;  
 }
 /* #endregion main*/
+
+/* #region footer*/
+#bg-foot1{
+    background-color: rgb(0, 0, 0);
+    height: 400px;
+    padding-top: 0.2rem;
+    padding-bottom: 1rem;
+}
+
+#item1-foot1{
+    background-color: rgb(251, 140, 236);
+    height: 100%;
+    width: 20%;
+}
+
+#item2-foot1{
+    background-color: rgb(39, 178, 145);
+    height: 100%;
+    width: 10%;
+}
+
+#item3-foot1{
+    background-color: rgb(39, 178, 145);
+    height: 100%;
+    width: 10%;
+}
+
+#item4-foot1{
+    background-color: rgb(39, 178, 145);
+    height: 100%;
+    width: 10%;
+}
+
+#item5-foot1{
+    background-color: rgb(39, 178, 145);
+    height: 100%;
+    width: 10%;
+}
+
+#bg-foot2{
+    background-color: rgb(0, 0, 0);
+    height: 75px;
+    padding-top: 1rem;
+    padding-bottom: 0rem;
+    border-top: 0.1rem solid rgb(212, 212, 212);
+    border-bottom: 0.1rem solid rgb(212, 212, 212);
+}
+
+#item1-foot2{
+    background-color: rgb(176, 255, 221);
+    height: 100%;
+    width: 60%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.flex-container-foot{
+    display: flex;
+    justify-content: space-between;
+}
+
+.bg-sub-item-foot{
+    background-color: pink;
+}
+/* #endregion footer*/
