--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     display: flex;
     justify-content: center;
 }
+
+img {
+    max-width: 100%;
+
+}
 /* #endregion general */
 
 /* #region debug */
@@ -17,16 +22,106 @@
     border: 1px dashed;
 }
 
+.debug header {
+    background-color: lightblue;
+}
+
+.debug header div {
+    background-color: orange;
+}
+
+.debug #bg-sec1{
+    background-color: blue;
+}
+
+.debug #bg-sec2{
+    background-color: rgb(255, 255, 255);
+}
+
+.debug #bg-sec3{
+    background-color: rgb(212, 212, 212);
+}
+
+.debug #bg-sec5{
+    background-color: rgb(212, 212, 212);
+}
+
+.debug #bg-foot1{
+    background-color: rgb(0, 0, 0);
+}
+
+.debug #bg-foot2{
+    background-color: rgb(0, 0, 0);
+}
+
+.debug #item-sec1 {
+    height: 400px;
+    background-color: violet;
+}
+
+.debug #item1-sec2 {
+    height: 400px;
+    background-color: rgb(88, 88, 255);
+}
+
+.debug #item2-sec2 {
+    height: 400px;
+    background-color: pink;
+}
+
+.debug #item1-sec3 {
+    height: 400px;
+    background-color: pink;
+}
+
+.debug #item2-sec3 {
+    height: 400px;
+    background-color: rgb(88, 88, 255);
+}
+
+.debug #item-sec5{
+    height: 600px;
+    background-color: green;
+}
+
+.debug #item1-foot1{
+    height: 400px;
+    background-color: rgb(251, 140, 236);
+}
+
+.debug #item2-foot1{
+    height: 400px;
+    background-color: rgb(39, 178, 145);
+}
+
+.debug #item3-foot1{
+    height: 400px;
+    background-color: rgb(39, 178, 145);
+}
+
+.debug #item4-foot1{
+    height: 400px;
+    background-color: rgb(39, 178, 145);
+}
+
+.debug #item5-foot1{
+    height: 400px;
+    background-color: rgb(39, 178, 145);
+}
+
+.debug #item-foot2{
+    height: 75px;
+    background-color: rgb(176, 255, 221);
+}
+
 /* #endregion debug */
 
 /* #region header*/
 header{
-    background-color: lightblue;
     padding: 0.5rem;
 }
 
 header div{
-    background-color: orange;
     padding: 0.5rem;
 }
 
@@ -48,116 +143,80 @@ header div{
 
 /* #region main*/
 #bg-sec1{
-    background-color: blue;
-    height: 400px;
     padding: 1rem;
 }
 
 #item-sec1{
-    background-color: violet;
-    height: 100%;
     width: 50%;  
 }
 
 #bg-sec2{
-    background-color: rgb(255, 255, 255);
-    height: 400px;
     padding: 1rem;
 }
 
 #item1-sec2{
-    background-color: rgb(88, 88, 255);
-    height: 100%;
     width: 40%;
 }
 
 #item2-sec2{
-    background-color: pink;
-    height: 100%;
     width: 20%;
 }
 
 #bg-sec3{
-    background-color: rgb(212, 212, 212);
-    height: 400px;
     padding: 1rem;
 }
 
 #item1-sec3{
-    background-color: pink;
-    height: 100%;
     width: 20%;
 }
 
 #item2-sec3{
-    background-color: rgb(88, 88, 255);
-    height: 100%;
     width: 40%;
 }
 
 #bg-sec5{
-    background-color: rgb(212, 212, 212);
-    height: 600px;
     padding: 1rem;
 }
 
 #item-sec5{
-    background-color: green;
-    height: 100%;
     width: 60%;  
 }
 /* #endregion main*/
 
 /* #region footer*/
 #bg-foot1{
-    background-color: rgb(0, 0, 0);
-    height: 400px;
     padding-top: 0.2rem;
     padding-bottom: 1rem;
 }
 
 #item1-foot1{
-    background-color: rgb(251, 140, 236);
-    height: 100%;
     width: 20%;
 }
 
 #item2-foot1{
-    background-color: rgb(39, 178, 145);
-    height: 100%;
     width: 10%;
 }
 
 #item3-foot1{
-    background-color: rgb(39, 178, 145);
-    height: 100%;
     width: 10%;
 }
 
 #item4-foot1{
-    background-color: rgb(39, 178, 145);
-    height: 100%;
     width: 10%;
 }
 
 #item5-foot1{
-    background-color: rgb(39, 178, 145);
-    height: 100%;
     width: 10%;
 }
 
 #bg-foot2{
-    background-color: rgb(0, 0, 0);
-    height: 75px;
     padding-top: 1rem;
     padding-bottom: 0rem;
     border-top: 0.1rem solid rgb(212, 212, 212);
     border-bottom: 0.1rem solid rgb(212, 212, 212);
 }
 
-#item1-foot2{
-    background-color: rgb(176, 255, 221);
-    height: 100%;
+#item-foot2{
     width: 60%;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -166,6 +225,7 @@ header div{
 .flex-container-foot{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .bg-sub-item-foot{
